argocd/applications/discourse/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: discourse-forwarded-proto
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
