argocd/applications/discourse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: discourse
  labels:
    app.kubernetes.io/name: discourse
    app.kubernetes.io/managed-by: argocd
