argocd/applications/discourse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discourse
  labels:
    app: discourse
    app.kubernetes.io/name: discourse
    app.kubernetes.io/part-of: lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: discourse
  template:
    metadata:
      labels:
        app: discourse
        app.kubernetes.io/name: discourse
        app.kubernetes.io/part-of: lab
    spec:
      enableServiceLinks: false
      containers:
        - name: discourse
          image: registry.ide-newton.ts.net/lab/discourse@sha256:bd5e09c8b70656d7e140cc54411f102c9e6c735b9f64b406054c5e609cb41d83
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: shared
              mountPath: /shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: discourse-shared
