argocd/applications/discourse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse
  labels:
    app: discourse
spec:
  type: ClusterIP
  selector:
    app: discourse
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
